<resources>
    <string name="app_name">Android Leaders Board</string>
    <string name="submit">Submit</string>
    <string name="title">LEADERBOARD</string>
    <string name="submissionTitle">Project Submission </string>
    <string name="fNameh">First Name </string>
    <string name="lNameh">Last Name </string>
    <string name="emailh">Email Address </string>
    <string name="githubh">Project on Github (link) </string>
    <string name="pSubmitText">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
